<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/TopBar"
        android:elevation="4dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="CREATE TASK"
        app:titleTextAppearance="@style/CustomToolbarTitleText" />

    <!-- Task Title -->

    <!-- Estimated Pomodoros -->

    <TextView
        android:id="@+id/taskTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        android:text="@string/task_title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <EditText
        android:id="@+id/taskTitleField"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_box"
        android:hint="@string/add_a_task"
        android:padding="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskTitleLabel" />

    <!-- Deadline -->

    <TextView
        android:id="@+id/estimatedPomodorosLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        android:text="@string/estimated_pomodoros"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskTitleField" />

    <EditText
        android:id="@+id/estimatedPomodorosField"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_box"
        android:hint="@string/e_g_4"
        android:inputType="number"
        android:padding="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/estimatedPomodorosLabel" />

    <TextView
        android:id="@+id/deadlineLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/deadline"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/estimatedPomodorosField" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/deadlineFieldWrapper"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_box"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deadlineLabel">

        <EditText
            android:id="@+id/deadlineField"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:focusable="false"
            android:hint="@string/choose_a_date"
            android:inputType="date"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/calendarIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/calendarIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/select_deadline"
            android:src="@drawable/ic_calendar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Priority -->
    <TextView
        android:id="@+id/priorityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/priority"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deadlineFieldWrapper" />

    <Spinner
        android:id="@+id/priorityDropdown"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_box"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priorityLabel" />

    <!-- Notification -->
    <TextView
        android:id="@+id/notificationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/notification_optional"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priorityDropdown" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/notificationFieldWrapper"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_box"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationLabel">

        <EditText
            android:id="@+id/notificationField"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:focusable="false"
            android:hint="@string/select_notification_date"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/notificationIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/notificationIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/select_notification"
            android:src="@drawable/ic_calendar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Create Button -->
    <Button
        android:id="@+id/createTaskButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@color/DarkBlue"
        android:text="@string/create"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationFieldWrapper" />

</androidx.constraintlayout.widget.ConstraintLayout>